--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
         class="m-0 d-flex align-items-center justify-content-evenly flex-wrap p-5 card-container gap-4"
       ></div>
     </section>
+    <footer>
+      <p class="text-center">2023. All rights reserved.©</p>
+    </footer>
     <script src="script.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
