--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </h1>
       </div>
       <div
-        class="m-0 d-flex align-items-center justify-content-evenly flex-wrap p-5 card-container"
+        class="m-0 d-flex align-items-center justify-content-evenly flex-wrap p-5 card-container row-gap-2"
       ></div>
     </section>
     <footer>
